--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^4.3.9",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.11",
+    "@mui/styles": "^5.11.11",
     "@next/font": "13.2.3",
+    "aws-amplify": "^5.0.16",
+    "mdi-material-ui": "^7.6.0",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
